tslint a ser chato

--- a/src/app/projects/project-table/project-table.component.html
+++ b/src/app/projects/project-table/project-table.component.html
@@ -19,9 +19,9 @@
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <button class="invisible-button" (dblclick)="openProjectRelatorios(element.id)">
+<!--        <button class="invisible-button" (dblclick)="openProjectRelatorios(element.id)">-->
                 {{element.name}}
-        </button>
+<!--        </button>-->
       </mat-cell>
     </ng-container>
     <ng-container matColumnDef="status">
