--- a/src/app/repository/repository.component.html
+++ b/src/app/repository/repository.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group [selectedIndex]="activeTab">
+<mat-tab-group >
   <mat-tab label="Projects">
     <app-projects></app-projects>
   </mat-tab>
