--- a/src/app/repository/new-relatorio/new-relatorio.component.html
+++ b/src/app/repository/new-relatorio/new-relatorio.component.html
@@ -2,14 +2,28 @@
   <mat-grid-list cols="2" rowHeight="300px">
     <mat-grid-tile>
       <div class="controllers-container">
+
         <mat-form-field>
           <input formControlName="name" matInput placeholder="Name*">
           <mat-error>This field is mandatory.</mat-error>
         </mat-form-field>
+
         <mat-form-field>
-          <input formControlName="revDeadline" matInput [matDatepicker]="revPicker" placeholder="Review Deadline">
-          <mat-datepicker-toggle matSuffix [for]="revPicker"></mat-datepicker-toggle>
-          <mat-datepicker #revPicker></mat-datepicker>
+          <mat-label>Status</mat-label>
+          <mat-select formControlName="status">
+            <ng-container *ngFor="let stat of statuses">
+              <mat-option value="{{stat.value}}">{{stat.viewValue}}</mat-option>
+            </ng-container>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Project</mat-label>
+          <mat-select formControlName="projId">
+            <ng-container *ngFor="let proj of formOptionsService.projectsArray">
+              <mat-option value="{{proj.id}}">{{proj.name}}</mat-option>
+            </ng-container>
+          </mat-select>
         </mat-form-field>
 
       </div>
@@ -17,11 +31,19 @@
 
     <mat-grid-tile>
       <div class="controllers-container">
+
+        <mat-form-field>
+          <input formControlName="revDeadline" matInput [matDatepicker]="revPicker" placeholder="Review Deadline">
+          <mat-datepicker-toggle matSuffix [for]="revPicker"></mat-datepicker-toggle>
+          <mat-datepicker #revPicker></mat-datepicker>
+        </mat-form-field>
+
         <mat-form-field>
           <input formControlName="delDeadline" matInput [matDatepicker]="delPicker" placeholder="Delivery Deadline">
           <mat-datepicker-toggle matSuffix [for]="delPicker"></mat-datepicker-toggle>
           <mat-datepicker #delPicker></mat-datepicker>
         </mat-form-field>
+
         <div class="button-row">
           <button mat-raised-button color="primary" type="submit"
                   [disabled]="newRelatorioFormService.form.invalid">Submit
