--- a/src/app/repository/relatorios-table/relatorios-table.component.html
+++ b/src/app/repository/relatorios-table/relatorios-table.component.html
@@ -20,6 +20,10 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element.status}}</mat-cell>
     </ng-container>
+    <ng-container matColumnDef="projName">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Project</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.project[0].name}}</mat-cell>
+    </ng-container>
     <ng-container matColumnDef="revDeadline">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Review Deadline</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element.revDeadline}}</mat-cell>
