--- a/src/app/repository/relatorios-table/relatorios-table.component.html
+++ b/src/app/repository/relatorios-table/relatorios-table.component.html
@@ -22,7 +22,7 @@
     </ng-container>
     <ng-container matColumnDef="projName">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Project</mat-header-cell>
-      <mat-cell *matCellDef="let element">{{element.project[0].name}}</mat-cell>
+      <mat-cell *matCellDef="let element">{{element.projName}}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="revDeadline">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Review Deadline</mat-header-cell>
