--- a/src/app/projects/project-table/project-table.component.html
+++ b/src/app/projects/project-table/project-table.component.html
@@ -12,10 +12,6 @@
 </div>
 <div class="mat-elevation-z8">
   <mat-table [dataSource]="listData" matSort>
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>ID</mat-header-cell>
-      <mat-cell *matCellDef="let element">{{element.id}}</mat-cell>
-    </ng-container>
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
       <mat-cell *matCellDef="let element">
@@ -30,10 +26,10 @@
     </ng-container>
     <ng-container matColumnDef="relatorios">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Reports</mat-header-cell>
-      <mat-cell *matCellDef="let element">
+      <mat-cell *matCellDef="let element;let row">
         <button class="invisible-button" (dblclick)="openInEditor(rel['complexRelatorioId'])"
                 *ngFor="let rel of element.relatorios">{{rel['name']}}</button>
-        <button mat-icon-button (click)="createRelatorio()">
+        <button mat-icon-button (click)="createRelatorio(row)">
           <mat-icon>add</mat-icon>
         </button>
       </mat-cell>
@@ -74,7 +70,7 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 50]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 50]" [pageSize]="10" showFirstLastButtons></mat-paginator>
 </div>
 
 
