--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -53,7 +53,7 @@
 <!--    <button type="button">Add</button>-->
     <!--    <section class="sheet" *ngFor="let sec of complexRelatorio">{{sec}}</section>-->
     <section #sRef class="sheet" #focusPage>
-      <button mat-icon-button (click)="fillCover(complexRelatorio.id)">
+      <button mat-icon-button (click)="fillCover(complexRelatorio)">
         <mat-icon>edit</mat-icon>
       </button>
       <div style="position:absolute;right:0; bottom:0;width: 40%; text-align: right;padding: 15%">
