--- a/src/app/editor/footer/footer.component.html
+++ b/src/app/editor/footer/footer.component.html
@@ -1,7 +1,7 @@
 <mat-divider style="clear:both"></mat-divider>
 <p></p>
 <a style="float: left; width: 34%; text-align: left;">
-  Version {{complexRelatorio.cover["version"]}} {{complexRelatorio.cover["remarks"]}}</a>
-<a style="float: left; width: 33%; text-align: center;">{{complexRelatorio.cover["classification"]}}</a>
+  Version {{editorComponent.complexRelatorio.cover["version"]}} {{editorComponent.complexRelatorio.cover["remarks"]}}</a>
+<a style="float: left; width: 33%; text-align: center;">{{editorComponent.complexRelatorio.cover["classification"]}}</a>
 <p style="float: left; width: 24%; text-align: right;"></p>
 
