--- a/src/app/editor/header/header.component.html
+++ b/src/app/editor/header/header.component.html
@@ -1,4 +1,4 @@
-<p style="float: left; width: 34%; text-align: left;">{{complexRelatorio.cover["companyLogo"]}}</p>
-<p style="float: left; width: 33%; text-align: center;">{{complexRelatorio.cover["classification"]}}</p>
-<p style="float: left; width: 33%; text-align: right;">{{complexRelatorio.cover["targetCompany"]}}</p>
+<p style="float: left; width: 34%; text-align: left;">{{editorComponent.complexRelatorio.cover.companyLogo}}</p>
+<p style="float: left; width: 33%; text-align: center;">{{editorComponent.complexRelatorio.cover["classification"]}}</p>
+<p style="float: left; width: 33%; text-align: right;">{{editorComponent.complexRelatorio.cover["targetCompany"]}}</p>
 <mat-divider style="clear:both"></mat-divider>
